--- a/src/app/components/workbench/sheetsdashboard/sheetsdashboard.component.scss
+++ b/src/app/components/workbench/sheetsdashboard/sheetsdashboard.component.scss
@@ -199,7 +199,7 @@ p { margin-bottom: 0px !important;}
 .dollar-card-w{ min-width: 150px !important; padding: 10px 20px 10px 20px;}
 .select-data-card-a{ width: 100%;padding: 6px;max-height: 240px;overflow-y: auto;}
 .form-control-pad{ padding: 0.170rem 0.65rem;}
-
+// .PositionSticky{position: sticky; z-index: 10;}
 
 
  // for Mobile Resolution //
@@ -294,4 +294,3 @@ p { font-size: 12px;}
 .form-control{ font-size: 10px; padding: 3px;}
 .dropdown-menu { min-width: 10rem;}
 }
-.PositionSticky{position: sticky;}
